# screeps-combat-eval

./: .gitignore  Cargo.toml  README.md
examples/: multi_room_combat_renders.rs  run_register.rs
resources/: captured-bases.json  real-terrain.json
src/: bench.rs  lib.rs  metrics.rs  oracle_calibration.rs  scoring.rs  tournament.rs
src/harness/: evaluate.rs  foreman_capture.rs  generate.rs  lifecycle.rs  mod.rs  mover_adjudication.rs  param_sweep.rs  report.rs  roster.rs  scenario.rs  terrain_import.rs  validate.rs  visualize.rs
