[package]
name = "screeps-combat-eval"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"
description = "The combat policy layer (ADR 0006 Part B / P2.H5): the ADR 0008a EXP-* experiment register as a runnable, metric-producing suite over the combat sim — the tactics-tuning loop. Change a tunable in screeps-combat-decision, run the register, watch the metrics move; gates flag regressions. (Sim-vs-server parity + golden vectors are the follow-on increment.)"

# A workspace MEMBER, like screeps-combat-agent: depends only on the other pure combat members
# (engine + decision + agent) + screeps-game-api, so it inherits the workspace [patch] table and
# Cargo.lock with no replication and builds host-only.

[dependencies]
screeps-game-api = "0.23"
# Sibling combat crates as git deps so this crate builds standalone; the root Cargo.toml
# [patch] table redirects them to the local working tree for in-workspace builds.
screeps-combat-engine = { git = "https://github.com/Azaril/screeps-combat-engine" }
screeps-combat-decision = { git = "https://github.com/Azaril/screeps-combat-decision" }
screeps-combat-agent = { git = "https://github.com/Azaril/screeps-combat-agent" }
# The bot's backend-agnostic structure-shape primitives, reused for the replay player's typed
# buildings (host-only; the root [patch] redirects to the local working tree).
screeps-visual = { git = "https://github.com/Azaril/screeps-visual" }
# Real-terrain fixtures (ADR 0025 §12 Stage 1): the committed `resources/real-terrain.json` (a handful
# of real mmo:shard3 rooms) is parsed into `TerrainFixture`s. (Foreman is added in Stage 3.)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
